--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zooniverse/grommet-theme": "^2.2.0",
+    "@zooniverse/react-components": "^1.0.2",
+    "grommet": "^2.17.1",
+    "lodash": "^4.17.21",
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.2.3"
   }
 }
